sfSandBoxCode/force-app/main/default/objects/Candidate_Document__c/Candidate_Document__c.object-meta.xml
<CustomObject>
    <label>Candidate Document</label>
    <nameField>
        <displayFormat>CDOC-{000000}</displayFormat>
        <label>Candidate Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>