sfSandBoxCode/force-app/main/default/objects/Candidate_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>Cover Letter</fullName>
            </value>
            <value>
                <fullName>Certificate of Good Conduct</fullName>
            </value>
            <value>
                <fullName>Photo</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>KRA PIN</fullName>
            </value>
            <value>
                <fullName>NHIF</fullName>
            </value>
            <value>
                <fullName>NSSF</fullName>
            </value>
            <value>
                <fullName>Transcripts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>