sfSandBoxCode/force-app/main/default/objects/Candidate_Document__c/fields/Saved_Location__c.field-meta.xml
<CustomField>
    <fullName>Saved_Location__c</fullName>
    <label>Saved Location</label>
    <type>Url</type>
</CustomField>